--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -16,3 +16,10 @@ jobs:
         with:
           target_kind: data
           target_path: ./landscape.yml
+      - uses: pascalgn/automerge-action@v0.16.4
+        if: success() && ${{ github.secret_source == 'Actions' }}
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          MERGE_LABELS: "automated-build"
+          MERGE_RETRY_SLEEP: 300000
+          MERGE_METHOD: "squash"
