--- a/landscape.yml
+++ b/landscape.yml
@@ -825,6 +825,13 @@ landscape:
             repo_url: https://github.com/thuml/depyf
             crunchbase: https://www.crunchbase.com/organization/facebook
           - item:
+            name: FlagGems
+            description: FlagGems is an operator library for large language models implemented in the Triton Language.
+            homepage_url: https://github.com/FlagOpen/FlagGems
+            logo: FlagGems_logo.svg
+            repo_url: https://github.com/FlagOpen/FlagGems
+            crunchbase:
+          - item:
             name: Glow
             description: Glow is a machine learning compiler and execution engine for hardware accelerators. It is designed to be used as a backend for high-level machine learning frameworks. The compiler is designed to allow state of the art compiler optimizations and code generation of neural network graphs
             homepage_url: https://github.com/pytorch/glow
