--- a/landscape.yml
+++ b/landscape.yml
@@ -123,6 +123,13 @@ landscape:
             repo_url: https://github.com/joeynmt
             crunchbase: https://www.crunchbase.com/organization/cornell-university
           - item:
+            name: LitGPT
+            description: 20+ high-performance LLMs with recipes to pretrain, finetune and deploy at scale.
+            homepage_url: https://github.com/Lightning-AI/litgpt
+            logo: LitGPT Light Mode.svg
+            repo_url: https://github.com/Lightning-AI/litgpt
+            crunchbase:
+          - item:
             name: OpenCompass
             description: OpenCompass is an LLM evaluation platform, supporting a wide range of models (Llama3, Mistral, InternLM2,GPT-4,LLaMa2, Qwen,GLM, Claude, etc) over 100+ 
               datasets.
@@ -843,6 +850,13 @@ landscape:
             logo: depfy.svg
             repo_url: https://github.com/thuml/depyf
             crunchbase: https://www.crunchbase.com/organization/facebook
+          - item:
+            name: FlagGems
+            description: FlagGems is an operator library for large language models implemented in the Triton Language.
+            homepage_url: https://github.com/FlagOpen/FlagGems
+            logo: FlagGems_logo.svg
+            repo_url: https://github.com/FlagOpen/FlagGems
+            crunchbase:
           - item:
             name: Glow
             description: Glow is a machine learning compiler and execution engine for hardware accelerators. It is designed to be used as a backend for high-level machine learning 
