--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,23 +1,24 @@
-name: Validate
+name: Validate Landscape
 
 on:
   merge_group:
   pull_request:
     branches:
       - main
+      - master
 
 jobs:
   validate-landscape:
     runs-on: ubuntu-latest
     name: "Validate landscape.yml file"
     steps:
-      - uses: actions/checkout@v3
-      - uses: cncf/landscape2-validate-action@v2
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: cncf/landscape2-validate-action@6381e8747c73412e638670807b402ef2b863e9f8 # v2.0.1
         with:
           target_kind: data
           target_path: ./landscape.yml
-      - uses: pascalgn/automerge-action@v0.16.4
-        if: success() && ${{ github.secret_source == 'Actions' }}
+      - uses: pascalgn/automerge-action@7961b8b5eec56cc088c140b56d864285eabd3f67 # v0.16.4
+        if: success()
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           MERGE_LABELS: "automated-build"
