--- a/landscape.yml
+++ b/landscape.yml
@@ -700,7 +700,7 @@ landscape:
             repo_url: https://github.com/ray-project/ray
             crunchbase: https://www.crunchbase.com/organization/anyscale
           - item:
-            name: KubeFlow trainer
+            name: Kubeflow Trainer
             description: Kubeflow Trainer is a Kubernetes-native project enabling scalable, distributed training of AI models and purpose-built for fine-tuning large language models (LLMs). It simplifies the scale-out of training workloads on multiple nodes, managing large datasets efficiently, and ensuring fault-tolerance.
             homepage_url: https://www.kubeflow.org/docs/components/trainer/
             logo: Kubeflow-Trainer-Logo_stacked-color.svg
