--- a/landscape.yml
+++ b/landscape.yml
@@ -709,7 +709,7 @@ landscape:
           - item:
             name: VeRL
             description: VeRL is a flexible, efficient and production-ready RL training framework designed for large language models (LLMs) post-training. It is an open source implementation of the HybridFlow paper
-            homepage_url: https://verl.readthedocs.io/en/latest/#
+            repo_url: https://verl.readthedocs.io/en/latest/#
             logo: verl.svg
             repo_url: https://github.com/volcengine/verl
       - subcategory:
