--- a/landscape.yml
+++ b/landscape.yml
@@ -708,10 +708,10 @@ landscape:
             crunchbase: https://www.crunchbase.com/organization/kubeflow
           - item:
             name: VeRL
-            description: VeRL is a flexible, efficient and production-ready RL training framework designed for large language models (LLMs) post-training. It is an open source implementation of the HybridFlow paper
-            repo_url: https://verl.readthedocs.io/en/latest/#
-            logo: verl.svg
-            repo_url: https://github.com/volcengine/verl
+            description: VeRL is a flexible, efficient, and production-ready RL training framework designed for large language models (LLMs) post-training. It is an open-source implementation of the HybridFlow paper.
+            homepage_url: https://verl.readthedocs.io/en/latest/
+            repo_url: https://github.com/volcengine/verl
+            logo: verl.svg
       - subcategory:
         name: Quantum
         items:
