--- a/landscape.yml
+++ b/landscape.yml
@@ -1032,7 +1032,7 @@ landscape:
               - Optimizations / Distributed
             description: Ray is a unified framework for scaling AI and Python applications. Ray consists of a core distributed runtime and a set of AI Libraries for accelerating ML workloads.
             homepage_url: https://github.com/ray-project/ray
-            logo: ray.svg
+            logo: Ray-updated.png
             repo_url: https://github.com/ray-project/ray
             crunchbase: 
             extra:
