--- a/landscape.yml
+++ b/landscape.yml
@@ -757,7 +757,7 @@ landscape:
             description: LMCache is an LLM serving engine extension that combines with vLLM or SGLang to reduce TTFT and increase throughput, especially under long-context scenarios. By storing the KV caches of reusable texts across various locations, including (GPU, CPU DRAM, Local Disk, Databases), LMCache reuses the KV caches of any reused text (not necessarily prefix) in any serving engine instance. Thus, LMCache saves precious GPU cycles and reduces user response delay.
             homepage_url: https://lmcache.ai/ 
             logo: LMCache.svg
-            repo_url: https://github.com/LMCache  
+            repo_url: https://github.com/LMCache/LMCache  
             crunchbase: 
           - item:
             name: SGLang
