Update Facebook description formatting in landscape.yml
Signed-off-by: Riaan Kleinhans <riaankleinhans@gmail.com>

--- a/landscape.yml
+++ b/landscape.yml
@@ -1163,7 +1163,8 @@ landscape:
             name: Meta Platforms, Inc. (member)
             homepage_url: https://meta.com/
             logo: meta_platforms_inc.svg
-            description: Founded in 2004 and headquartered in Menlo Park, California, Facebook is an American online social media and social networking service company that provides various products to connect and share.
+            description: |-
+              Founded in 2004 and headquartered in Menlo Park, California, Facebook is an American online social media and social networking service company that provides various products to connect and share.
             crunchbase: https://www.crunchbase.com/organization/facebook
             twitter: https://twitter.com/Meta
             extra:
