--- a/landscape.yml
+++ b/landscape.yml
@@ -13,6 +13,13 @@ landscape:
             repo_url: https://github.com/neuraloperator/neuraloperator 
             crunchbase: 
           - item:
+            name: PhysicsNeMo
+            description: PhysicsNeMo is an open source deep learning framework for building, fine tuning, and inferring Physics AI models using state-of-the-art SciML methods for AI4Science and engineering.
+            homepage_url: https://developer.nvidia.com/physicsnemo 
+            logo: physicsnemo.svg
+            repo_url: https://github.com/NVIDIA/physicsnemo 
+            crunchbase: 
+          - item:
             name: PINA
             description: PINA is an open-source library designed to simplify and accelerate the development of Scientific Machine Learning solutions.
             homepage_url: https://github.com/mathLab/PINA 
