--- a/landscape.yml
+++ b/landscape.yml
@@ -1285,6 +1285,15 @@ landscape:
             extra:
               linkedin_url: https://www.linkedin.com/company/graphcore
           - item:
+            name: Emmi AI (member)
+            homepage_url: https://www.emmi.ai/
+            logo: emmi-ai.svg
+            description: Large Engineering Models are pre-trained engineering intelligence that replace solvers, work everywhere, and deliver instant physics-accurate results for entire verticals.
+            crunchbase: https://www.crunchbase.com/organization/emmi-ai
+            linkedin_url: https://www.linkedin.com/company/emmiai/ 
+            extra:
+              linkedin_url: https://www.linkedin.com/company/emmiai/
+          - item:
             name: Rebellions (member)
             homepage_url: https://rebellions.ai/
             logo: rebellions.svg
